core/templates/dev/head/css/oppia.css
/* ... */
.oppia-dashboard-container {
  margin: 0 auto 30px auto;
  max-width: 800px;
}

.oppia-learner-dashboard-icon {
  color: white;
  float: right;
  font-size: 19px;
  margin-left: -16px;
  position: relative;
  right: 13px;
  top: 13px;
  z-index: 10;
}

.oppia-dashboard-container .exp-private-text {
  color: #aaa;
  font-style: italic;
}

.oppia-activity-summary-tile.oppia-activity-playlist-tile {
  border-bottom: 1px solid #C0C0C0;
  height: 145px;
  margin: 0;
  width: 100%;
}

@media (max-width: 768px) {
  .headroom {
    will-change: transform;
    transition: transform 200ms linear;
  }

  .headroom--pinned {
    transform: translateY(0%);
  }

  .headroom--unpinned {
    transform: translateY(-100%);
  }
}

h1, h2 {
  color: #000;
}

h3 {
  color: #222;
  line-height: 1.1;
}

a {
  color: #0844aa;
  cursor: pointer;
}

a:hover {
  color: #3f2c76;
}

a:focus {
  outline-style: none;
}

/* Change all the borders of an input to red when there is validation errors. */
input.ng-dirty.ng-invalid, md-input-group.md-default-theme input.ng-dirty.ng-invalid {
  border-color: #F44336;
}

::-webkit-input-placeholder {
  font-style: italic;
}
::-moz-placeholder {
  font-style: italic;
}
::-ms-input-placeholder {
  font-style: italic;
}

.oppia-issues-learner-action-table td,
.oppia-issues-learner-action-table th {
  border: 1px solid black;
}

/* Change the color of odd-numbered lines in a table. */
.table-striped > tbody > tr:nth-child(odd) > td,
.table-striped > tbody > tr:nth-child(odd) > th {
  background-color: #f0f0f0;
}

.oppia-form-error {
  color: red;
}

.oppia-serious-warning-text {
  color: red;
}

.oppia-disabled-contenteditable {
  background-color: #eee;
  cursor: not-allowed;
  padding: 10px 5px;
  opacity: 1;
}

p {
  line-height: 1.2;
  margin-bottom: 18px;
  text-align: left;
  word-spacing: 0;
  word-wrap: break-word;
}

p:last-child {
  margin: 0px;
}

.oppia-long-text p {
  line-height: 1.4;
  /* The following should be the same as the line-height (1.4). */
  margin: 1.4em 0;
}

/* This will prevent the enlargement of the text in the RTE. A span tag gets
   introduced when a user selects the text from the end of first line, goes to the
   second one and then writes some text to replace that. The span tag carries
   along with it a style=font-size:1.6em;, due to which the text is enlarged.
   This size seems to be taken from the font-size from the body element's
   CSS class, but we do not know what JS code is causing it to be inlined in the
   span tag. There is as such no way to remove !important as of now, it's a
   CKEditor bug (issue #6206 on Oppia). */
.oppia-rte p span {
  font-size: 1em !important;
}

.oppia-rte-editor p span {
  font-size: 1em !important;
}

.oppia-long-text-image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 80%;
}

#wrapper {
  min-height: 100%;
  position: relative;
}

.label {
  margin: auto 4px;
}
.label-info {
  background-color: #18447E;
}

/*
  The following rule ensures that, as the viewport gets
  smaller, any media will scale down according to its
  container's width.
*/
img, video, canvas {
  max-width: 100%;
}

textarea {
  width: 90%;
}

/*
  Styles for the development mode indicator
*/
.oppia-dev-mode {
  background-color: DarkSlateGray;
  border-bottom-right-radius: 0.5em;
  border-top-right-radius: 0.5em;
  bottom: 40px;
  color: white;
  left: 0;
  opacity: 0.7;
  padding: 4px 8px;
  /* This allows clicks to 'pass through' the element. */
  pointer-events: none;
  position: fixed;
  z-index: 100;
}

/*
  Styles for the link to the site feedback form.
*/
.oppia-site-feedback {
  background-color: #fff;
  border-radius: 2px;
  bottom: 4px;
  color: rgba(0,0,0,0.87);
  cursor: pointer;
  left: 4px;
  opacity: 0.5;
  padding: 4px 8px;
  position: fixed;
  /* This is needed so that the exploration summary tiles don't overlap the button in the library page. */
  z-index: 3;
}
.oppia-site-feedback:hover,
.oppia-site-feedback:focus,
.oppia-site-feedback:active {
  color: rgba(0,0,0,0.87);
  opacity: 1.0;
  text-decoration: none;
}
@media (max-width: 1100px) {
  .oppia-site-feedback span {
    display: none;
  }
}

/*
  Styles for BackgroundMaskService.
*/
.oppia-background-mask {
  background: rgba(0,0,0,0.33);
  height: 100vh;
  left: 0;
  position: fixed;
  top: 0;
  width: 100vw;
  z-index: 30;
}

/*
  Styles for the global navigation sidebar menu.
*/
.oppia-base-container {
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  min-height: 100%;
  position: relative;
}

/*
  Style for the oppia reload symbol in reload image button.
*/
.oppia-reload-image-symbol {
  padding-bottom: 10px;
  padding-left: 16px;
  position: relative;
}

/*
  Note that adding "overflow-y: scroll;" will break infinite scrolling in the
  search results page.
*/
.oppia-content-container {
  height: 100%;
  left: 0;
  position: relative;
  transition: transform 0.5s;
  -webkit-transition: -webkit-transform 0.5s;
}

.oppia-correctness-label-editor {
  margin-left: 4px;
  margin-top: 18px;
}

.oppia-sidebar-menu-open .oppia-sidebar-menu {
  box-shadow: 1px 0 3px rgba(0,0,0,0.12), 1px 0 2px rgba(0,0,0,0.24);
  height: 110vh;
  overflow-y: scroll;
  -ms-transform: translate(0, 0);
  -webkit-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  visibility: visible;
}
.oppia-sidebar-menu-open .oppia-sidebar-menu::after {
  height: 0;
  opacity: 0;
  -webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
  transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
  width: 0;
}

.oppia-sidebar-menu-open .oppia-content-container::after {
  height: 100%;
  opacity: 1;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
  width: 100%;
}
.oppia-sidebar-menu-closed .oppia-content-container::after {
  opacity: 0;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.oppia-sidebar-logo {
  height: 32px;
  margin-bottom: 5px;
  margin-left: 15px;
}
/* ... */

